add netlify adapter

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/netlify": "^4.0.0",
     "@jop-software/astro-matomo": "^1.1.0",
     "astro": "^4.0.6",
     "typescript": "^5.3.3"
