--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^4.0.0",
     "@jop-software/astro-matomo": "^1.1.0",
     "astro": "^4.0.6",
+    "astro-color-scheme": "^1.1.2",
     "astro-icon": "^0.8.2",
     "astro-seo": "^0.8.0",
     "typescript": "^5.3.3"
