--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.3",
     "@astrojs/netlify": "^4.0.0",
     "@jop-software/astro-matomo": "^1.1.0",
+    "@julian_cataldo/astro-resets": "^0.12.6",
     "astro": "^4.0.6",
     "astro-color-scheme": "^1.1.2",
     "astro-icon": "^0.8.2",
